<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menuLayer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFFE6"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/mainFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/main_content_desc"
                android:visibility="visible"
                app:srcCompat="@drawable/ezgif_com_gif_maker" />
        </RelativeLayout>

        <TableLayout
            android:id="@+id/dogActions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:visibility="gone">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                android:padding="20dp">

                <Button
                    android:id="@+id/foodButton"
                    android:layout_width="68dp"
                    android:layout_height="76dp"
                    android:shadowColor="#673AB7"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:text="@string/food_button"
                    app:backgroundTint="#FF9800"
                    app:cornerRadius="30dp" />

                <Space
                    android:layout_width="70dp"
                    android:layout_height="74dp" />

                <Space
                    android:layout_width="70dp"
                    android:layout_height="74dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                android:padding="20dp">

                <Button
                    android:id="@+id/shopButton"
                    android:layout_width="68dp"
                    android:layout_height="76dp"
                    android:shadowColor="#673AB7"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:text="@string/shop_button"
                    app:backgroundTint="#FF9800"
                    app:cornerRadius="30dp" />

                <Space
                    android:layout_width="70dp"
                    android:layout_height="74dp" />

                <Button
                    android:id="@+id/dogsButton"
                    android:layout_width="68dp"
                    android:layout_height="76dp"
                    android:shadowColor="#673AB7"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:text="@string/dogs_button"
                    app:backgroundTint="#FF9800"
                    app:cornerRadius="30dp" />

            </TableRow>

        </TableLayout>

        <TableLayout
            android:id="@+id/additionalActions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="69dp" />

                <Space
                    android:layout_width="70dp"
                    android:layout_height="74dp" />

                <Button
                    android:id="@+id/calendarButton"
                    android:layout_width="68dp"
                    android:layout_height="76dp"
                    android:shadowColor="#03A9F4"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:text="@string/calendar_button"
                    app:backgroundTint="#00BCD4"
                    app:cornerRadius="30dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

                <Button
                    android:id="@+id/goalButton"
                    android:layout_width="68dp"
                    android:layout_height="76dp"
                    android:shadowColor="#03A9F4"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:text="@string/goals_button"
                    app:backgroundTint="#00BCD4"
                    app:cornerRadius="30dp" />

                <Space
                    android:layout_width="70dp"
                    android:layout_height="74dp" />

                <Button
                    android:id="@+id/statisticButton2"
                    android:layout_width="68dp"
                    android:layout_height="76dp"
                    android:shadowColor="#03A9F4"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:text="@string/statistic_button"
                    app:backgroundTint="#00BCD4"
                    app:cornerRadius="30dp" />

            </TableRow>

        </TableLayout>

        <LinearLayout
            android:id="@+id/Buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/healthActivityButton"
                        android:layout_width="68dp"
                        android:layout_height="76dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:maxWidth="10dp"
                        android:shadowColor="#3F51B5"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:text="@string/act_button"
                        app:backgroundTint="#03A9F4"
                        app:cornerRadius="30dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="end">

                    <Button
                        android:id="@+id/DogButton"
                        android:layout_width="68dp"
                        android:layout_height="76dp"
                        android:shadowColor="#FF9800"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:text="@string/dog_button"
                        app:backgroundTint="#FFC107"
                        app:cornerRadius="30dp" />

                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/settingsButton"
                        android:layout_width="68dp"
                        android:layout_height="76dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:shadowColor="#03A9F4"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:text="@string/settings_button"
                        app:backgroundTint="#8F8F8F"
                        app:cornerRadius="30dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/helpButton"
                            android:layout_width="68dp"
                            android:layout_height="76dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:shadowColor="#673AB7"
                            android:shadowDx="1"
                            android:shadowDy="1"
                            android:text="help"
                            app:backgroundTint="#31DD42"
                            app:cornerRadius="30dp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end">

                        <Button
                            android:id="@+id/rubyButton"
                            android:layout_width="68dp"
                            android:layout_height="76dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:shadowColor="#673AB7"
                            android:shadowDx="1"
                            android:shadowDy="1"
                            android:text="@string/bank_button"
                            app:backgroundTint="#E91E63"
                            app:cornerRadius="30dp" />
                    </RelativeLayout>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|end">

            <ImageButton
                android:id="@+id/goWalk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/walk_button_desc"
                app:srcCompat="@android:drawable/ic_media_play" />
        </RelativeLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/walkScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal|center_vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/running_dog_desc"
                app:srcCompat="@drawable/running_dog" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="100dp"
            android:gravity="bottom|center_horizontal">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:maxWidth="300dp"
                android:minWidth="100dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="150dp"
            android:gravity="bottom|end"
            android:visibility="visible">

            <Button
                android:id="@+id/goHomeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_home_button" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/timer"
                android:textColor="@color/indicators"
                android:textSize="14pt" />

            <TextView
                android:id="@+id/distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/distance"
                android:textColor="@color/indicators"
                android:textSize="16pt" />

            <TextView
                android:id="@+id/stopwatch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/stopwatch"
                android:textColor="@color/indicators"
                android:textSize="10pt" />

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>